# freefloating

./: CMakeLists.sublime-workspace  README.md
freefloating_gazebo/: CMakeLists.txt  README.md
freefloating_gazebo/cfg/: kp.cfg
freefloating_gazebo/include/freefloating_gazebo/: freefloating_pids_body.h  hydro_model_parser.h  thruster_allocator.h
freefloating_gazebo/src/: freefloating_pids_body.cpp  freefloating_pids_joint.cpp  freefloating_pids_main.cpp  matplotlibcpp.h  thruster_allocator.cpp
freefloating_gazebo_demo/: CMakeLists.txt
freefloating_gazebo_demo/config/: vectored_body.yaml  vectored_joint.yaml
freefloating_gazebo_demo/launch/: TwistStampedGUI.yaml  g500arm5e_manual.launch  vectored.launch
freefloating_gazebo_demo/src/: freefloating_gazebo_demo.cpp  velocity_torque.cpp
freefloating_gazebo_demo/urdf/: vectored.xacro
